src/test/deca/etapeB/invalid/and_bool_float.res
./src/test/deca/etapeB/invalid/and_bool_float.deca:7:6: this operation can be done only on boolean types
